objects/Performance_Guarantees__c.object
<CustomObject>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Document__c</fullName>
        <label>Source Document</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilization_Guarantee__c</fullName>
        <inlineHelpText>Indicate the minimum utilization OR combined utilization to meet PG (include &quot;%&quot; if percentage and &quot;cases&quot; if based on # of case</inlineHelpText>
        <label>***Deprecated***Utilization Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_Comments__c</fullName>
        <label>***Deprecated***Waiver Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiver_End_Date__c</fullName>
        <label>***Deprecated***Waiver End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Start_Date__c</fullName>
        <label>***Deprecated***Waiver Start Date</label>
        <type>Date</type>
    </fields>
    <label>Performance Guarantees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PG - {0000}</displayFormat>
        <label>Performance Guarantee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Guarantees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Guarantee_Description_field_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Guarantee_Description__c == &apos;&apos;,
Guarantee_Description__c  == null) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Guarantee Description field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_PG_Outcome_Timing_and_Unit_Required</fullName>
        <active>true</active>
        <description>Please make sure you have entered both PG outcome timing as well as Unit</description>
        <errorConditionFormula>OR(AND(Text(PG_Outcome_Timing_Unit__c) = null,NOT(ISBLANK( PG_Outcome_Timing__c ))),
AND(ISBLANK(PG_Outcome_Timing__c),Text(PG_Outcome_Timing_Unit__c) &lt;&gt;null) ) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Please make sure you have entered both PG outcome timing as well as Unit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Calculation_Method_Field_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Calculation_Method__c, &apos;Other&apos;),
OR( Other_Calculation_Method__c == null,
Other_Calculation_Method__c == &apos;&apos;
)
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Other Calculation Method field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Evaluation_Frequency_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Evaluation_Frequency__c , &apos;Other&apos;),
OR( Other_Evaluation_Frequency__c == null,
Other_Evaluation_Frequency__c == &apos;&apos;
)
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Other Evaluation Frequency field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Guarantee_Type_Required</fullName>
        <active>true</active>
        <description>Required if Guarantee Type is Other</description>
        <errorConditionFormula>AND(ISPICKVAL(Guarantee_Type__c , &apos;Other&apos;),
    OR(Other_Guarantee_Type__c == null,
       Other_Guarantee_Type__c == &apos;&apos;
    )
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Other Guarantee Type field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_Fees_at_Risk_Type_is_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Fees_at_Risk_Type__c , &apos;Other&apos;),
OR( Other_Fees_at_Risk_Type__c == null,
Other_Fees_at_Risk_Type__c == &apos;&apos;
)
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Other Fees at Risk Type field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_Fees_at_Risk_is_Yes</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(Fees_at_Risk__c  , &apos;Yes&apos;),
OR( Fees_at_Risk_Amount__c == null,
Fees_at_Risk_Amount__c == &apos;&apos;
)
) &amp;&amp; $Setup.BypassSetting__c.Bypass_Validation_Rule__c = False</errorConditionFormula>
        <errorMessage>Fee at Risk Amount field is required</errorMessage>
    </validationRules>
</CustomObject>